Support Update for SpaceChem